fixed spacing issue in main box

--- a/css/index.css
+++ b/css/index.css
@@ -270,6 +270,7 @@ h2 {
 .homePage .middleText p {
   margin: 10px;
   font-size: 1.3rem;
+  line-height: 25px;
 }
 .homePage .middleText .mainBtns {
   margin: 20px 10px;
