--- a/less/main-page.less
+++ b/less/main-page.less
@@ -28,6 +28,7 @@
             p {
                     margin: 10px;
                     font-size: 1.3rem;
+                    line-height: 25px;
             }
             .mainBtns{
                     margin: 20px 10px;
